deployment/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: trichter
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: trichter
spec:
  selector:
    app.kubernetes.io/name: web
  ports:
    - port: 3000
      targetPort: 3000
