deployment/base/web/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: trichter
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`next.trichter.hauptspeicher.com`)
      kind: Rule
      services:
        - name: web
          port: 3000
    - match: Host(`next.trichter.hauptspeicher.com`) && PathPrefix(`/api/auth`)
      kind: Rule
      services:
        - name: web
          port: 3000
    - match: Host(`oidc.trichter.hauptspeicher.com`) && PathPrefix(`/.well-known/assetlinks.json`)
      kind: Rule
      services:
        - name: web
          port: 3000
  tls:
    certResolver: myresolver
